<!--
  ~ Copyright 2019 Maharaj Fawwaz Almuqaddim Yusran
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Plan Your Semester</string>

    <string name="plan">Plan</string>
    <string name="date_start_end">%1$s - %2$s</string>
    <string name="homework_date">Due %1$s</string>

    <string name="exam_label">Exam</string>
    <string name="homework_label">Assignment</string>
    <string name="event_label">Event</string>
    <string name="reminder_label">Reminder</string>

    <string name="add_new">Add %1$s</string>

    <string name="add_plan">Add Plan</string>
    <string name="error_text_empty">Must not be empty</string>
    <string name="error_date_format">Must be of format: dd/MM/yyyy hh:mm</string>
    <string name="error_date_not_possible">Must be after start time</string>
    <string name="plan_name">Name</string>
    <string name="plan_description">Description (optional)</string>
    <string name="plan_start_date">Start time</string>
    <string name="plan_end_date">Time finished</string>
    <string name="plan_date">Date</string>
    <string name="homework_hint_date">Due date and time</string>
    <string name="plan_date_time">Date and time</string>
    <string name="plan_subject">Subject</string>
    <string name="success_plan_added">New %1$s is added successfully</string>

    <string name="update_plan">Update %1$s</string>
    <string name="update_plan_default">Update Plan</string>
    <string name="success_plan_update">%1$s is updated successfully</string>
    <string name="is_done">Done?</string>

    <string name="remove_plan">Remove %1$s</string>
    <string name="dialog_remove_plan_title">Removing %1$s</string>
    <string name="dialog_remove_plan_mes">Do you really want to remove \'%1$s\'?</string>

    <string name="add_subject">Add Subject</string>
    <string name="remove_subject">Remove Subject</string>
    <string name="dialog_add_subj_title">Add a Subject</string>
    <string name="hint_add_subject">Subject name</string>
    <string name="subject_color">Subject color</string>
    <string name="dialog_color_subj_title">Choose the Subject Color</string>
    <string name="select">select</string>
    <string name="success_subj_add">\'%1$s\' subject added successfully</string>

    <string name="dialog_rm_subj_title">Choose a Subject to Remove</string>
    <string name="dialog_confirm_rm_subj_title">Confirm Delete Subject</string>
    <string name="dialog_confirm_rm_subj_mes">Do you really want to remove subject \'%1$s\'?</string>
    <string name="success_subj_rm">\'%1$s\' subject removed successfully</string>
    <string name="fail_subj_rm">Please remove all exams or homework of \'%1$s\' subject first</string>
    <string name="no_subjects_found">No subjects found!</string>
    <string name="subjects_empty">At least 1 subject must be registered</string>

    <string name="notif_1_day_before">%1$s starts tomorrow</string>
    <string name="notif_due_in_1_day">%1$s is due tomorrow</string>
    <string name="channel_name">Default Channel</string>
    <string name="channel_description">High priority channel</string>
    <string name="starts_tomorrow">Starts tomorrow</string>
    <string name="notif_30_mins_before">%1$s starts in 30 minutes</string>
    <string name="notif_due_in_30_min">%1$s is due in 30 minutes</string>

</resources>
